--- a/index_jp.html
+++ b/index_jp.html
@@ -40,7 +40,7 @@
     <header>
       <div>
         <h1 class="header-title">
-          北海道パウダーベルトを探索：あなた好みのスキーアドベンチャーをカスタマイズ
+          北海道パウダーベルトを探索しよう：あなた好みのスキーアドベンチャーをカスタマイズ
         </h1>
         <h5 class="header-title">
           あなたのニーズに合わせた柔軟なキャンピングカーツアーパッケージ
@@ -65,9 +65,9 @@
 
     <main>
       <section>
-        <h3 class="my-midium">北海道パウダーベルトを発見する</h3>
+        <h3 class="my-midium">北海道パウダーベルトを探索する</h3>
         <p>
-          北海道パウダーベルトは、スキー愛好家にとって一流の目的地であり、その卓越したパウダースノー、多様なスキーリゾート、そして容易なアクセス性で知られています。北海道の中央部に位置するこのエリアは、南北約200キロメートルにわたり、複数の著名なリゾートで様々なスキー体験を提供しています。
+          北海道パウダーベルトは、スキーヤーにとって一流の目的地であり、その卓越したパウダースノー、多様なスキーリゾート、そして容易なアクセス性で知られています。北海道の中央部に位置するこのエリアは、南北約200キロメートルにわたり、複数の著名なリゾートで様々なスキー体験を提供しています。
         </p>
         <div class="column-2 my-midium">
           <img src="./common/images/images01.webp" alt="" />
@@ -190,19 +190,18 @@
             <div class="column-2">
               <img src="./common/images/tomamu.webp" />
               <div>
-                <h6>星野リゾート TOMAMU</h6>
+                <h6>星野リゾート トマム</h6>
                 <p>
-                  星野リゾート TOMAMUは、北海道の中心に位置する最高級のスキーリゾートです。
-                  北海道の中心に位置する最高級スキーリゾートです。ラグジュアリーとアドベンチャーが融合した
-                  ウィンタースポーツを愛する方にも、リラックスした休暇を求める方にも理想的な場所です。
-                  ウィンタースポーツ愛好家にも、リラックスした休暇を求める人にも理想的な場所です。
+                  星野リゾート
+                  トマムは、北海道の中心に位置する最高級のスキーリゾートです。
+                  ラグジュアリーとアドベンチャーが融合したウィンタースポーツを愛する方にも、リラックスした休暇を求める方にも理想的な場所です。
                 </p>
                 <ul class="my-midium">
                   <li>トラベルプラン特典:</li>
                   <ul>
                     <li>お一人様につき朝食2回無料券</li>
                     <li>充実したアメニティ</li>
-                    <li>ミナ・ミナビーチ </li>
+                    <li>ミナ・ミナビーチ</li>
                     <li>麒麟の湯 入浴</li>
                   </ul>
                 </ul>
@@ -212,19 +211,19 @@
             <a href="./" class="my-midium">詳細</a>
             <div class="column-2 my-midium">
               <div>
-                <h5>星野リゾート TOMAMU</h5>
+                <h5>星野リゾート トマム</h5>
                 <p>
-                  星野リゾート TOMAMUは、北海道の中心に位置する最高級のスキーリゾートです。
+                  星野リゾート
+                  トマムは、北海道の中心に位置する最高級のスキーリゾートです。
                   北海道の中心に位置する最高級スキーリゾートです。ラグジュアリーとアドベンチャーが融合した
                   ウィンタースポーツを愛する方にも、リラックスした休暇を求める方にも理想的な場所です。
-                  ウィンタースポーツ愛好家にも、リラックスした休暇を求める人にも理想的な場所です。
                 </p>
                 <ul class="my-midium">
                   <li>トラベルプラン特典:</li>
                   <ul>
                     <li>お一人様につき朝食2回無料券</li>
                     <li>充実したアメニティ</li>
-                    <li>ミナ・ミナビーチ </li>
+                    <li>ミナ・ミナビーチ</li>
                     <li>麒麟の湯 入浴</li>
                   </ul>
                 </ul>
@@ -246,30 +245,30 @@
                   北海道パウダーベルト5日券は、トマムスキー場、富良野スキー場、カムイスキー場3スキー場で利用可能。
                   有効期限は滑走開始から10日間です。スキー場は5回滑走できます。
                 </p>
-                <h5>TOMAMU スキーエリア</h5>
+                <h5>トマム スキーエリア</h5>
                 <p>
-                  星野リゾート TOMAMUは、さらさらのパウダースノーと多彩なコースで知られる見どころ
-                  日本最大の屋内波のプール、ミナミナビーチがある。
+                  星野リゾート
+                  トマムは、さらさらのパウダースノーと多彩なコースで知られる見どころ
+                  日本最大の屋内波のプール、ミナミナビーチがあります。
                 </p>
               </div>
 
               <div class="my-midium">
                 <h5>富良野 スキーリゾート</h5>
                 <p>
-                  富良野スキー場は「シャンパン・パウダースノー」が特徴で山と渓谷の絶景で有名である。
+                  富良野スキー場は「シャンパン・パウダースノー」が特徴で山と渓谷の絶景で有名です。
                 </p>
               </div>
 
               <div class="my-midium">
                 <h5>カムイ スキーリンクス</h5>
                 <p>
-                  カムイスキーリンクスは、グルーミングされたパウダーコースとのんびりとした雰囲気のスキー場である。
-                  ツリーランで知られ、すべての技術レベルに最適な変化に富んだ地形を提供している。
+                  カムイスキーリンクスは、グルーミングされたパウダーコースとのんびりとした雰囲気のスキー場です。
+                  ツリーランで知られ、すべての技術レベルに最適な変化に富んだ地形を提供しています。
                 </p>
                 <p>
-                  これらのリゾートでは、極上のパウダースノーが楽しめ、ファミリー向けのコースから上級者向けのコースまで、さまざまなスキー体験ができる。
-                  家族向けのコースから上級者向けのコース、バックカントリーアドベンチャーまで様々なスキー体験ができる。
-                  
+                  これらのリゾートでは、極上のパウダースノーが楽しめ、ファミリー向けのコースから上級者向けのコースまで、さまざまなスキー体験ができます。
+                  家族向けのコースから上級者向けのコース、バックカントリーアドベンチャーまで様々なスキー体験ができます。
                 </p>
               </div>
             </div>
@@ -288,12 +287,13 @@
               <li class="list-title">
                 1日目:
                 <ul>
-                  <li>新千歳空港に到着し、キャンピングカーをレンタルします。</li>
-                  <li>星野リゾート TOMAMUへ。</li>
+                  <li>
+                    新千歳空港に到着し、キャンピングカーをレンタルします。
+                  </li>
+                  <li>星野リゾート トマムへ</li>
                   <li>一日中スキーをお楽しみいただけます。</li>
                   <li>
-                    アイスビレッジで氷のワンダーランドを探検しましょう（要
-                    追加料金）。
+                    アイスビレッジで氷のワンダーランドを探検しましょう（要追加料金）。
                   </li>
                   <li>パーキングエリアで一泊。</li>
                 </ul>
@@ -303,8 +303,10 @@
                 2日目:
                 <ul>
                   <li>フォレストレストランニニヌプリで朝食。</li>
-                  <li>TOMAMUスキー場でもっとスキーを楽しみましょう。</li>
-                  <li>ミナミナビーチで頂上アクティビティをお楽しみください。</li>
+                  <li>トマムスキー場でもっとスキーを楽しみましょう。</li>
+                  <li>
+                    ミナミナビーチで頂上アクティビティをお楽しみください。
+                  </li>
                   <li>キャンピングカーで一泊。</li>
                 </ul>
               </li>
@@ -313,9 +315,7 @@
                 3日目:
                 <ul>
                   <li>ビュッフェダイニングホールでの朝食。</li>
-                  <li>
-                    星野リゾート TOMAMUから富良野スキー場へ移動。
-                  </li>
+                  <li>星野リゾート トマムから富良野スキー場へ移動。</li>
                   <li>富良野スキー場でスキー。</li>
                   <li>旭川市へ移住。</li>
                   <li>居酒屋で夕食。</li>
@@ -328,7 +328,8 @@
                 <ul>
                   <li>OMOカフェ&バーで朝食。</li>
                   <li>
-                    富良野スキー場またはカムイスキーリンクスで滑走 雪の状況により異なる。
+                    富良野スキー場またはカムイスキーリンクスで滑走
+                    雪の状況により異なる。
                   </li>
                   <li>居酒屋で夕食。</li>
                   <li>OMO7旭川の駐車場で宿泊。</li>
@@ -358,12 +359,8 @@
                   <li>
                     5日分パッケージ:
                     <ul>
-                      <li>
-                        <span>19歳以上</span>: 68,000 円 (税込)
-                      </li>
-                      <li>
-                        <span>18歳以下</span>: 55,000 円 (税込)
-                      </li>
+                      <li><span>19歳以上</span>: 68,000 円 (税込)</li>
+                      <li><span>18歳以下</span>: 55,000 円 (税込)</li>
                     </ul>
                   </li>
                   <li>
@@ -424,9 +421,8 @@
       <section>
         <h3>あなたのキャンピングカー</h3>
         <p>
-          キャンピングカーは以下のタイプからお選びいたします。私たちは
-          お選びいただくことはできませんので、ご理解のほどよろしくお願いいたします。
-          特定の車両。
+          キャンピングカーは以下のタイプのいずれかから選ばれます。
+          特定の車両タイプをお選びいただくことはできませんので、ご理解のほどよろしくお願いいたします。
         </p>
         <h3 class="my-midium">ロビンソン 771 (クラス C)</h3>
         <div class="column-2">
@@ -559,10 +555,10 @@
         </div>
         <div class="tab-panel panel-f" role="tabpanel">
           <div class="panel-wrapper">
-            <h6>星野リゾート TOMAMU</h6>
+            <h6>星野リゾート トマム</h6>
 
             <p>
-              サラサラの粉雪で知られる星野リゾート TOMAMU。
+              サラサラの粉雪で知られる星野リゾート トマム。
               あらゆるレベルに対応する多様なスキーコース。ハイライトには以下が含まれます：
               アイスビレッジと日本最大のインドアウェーブ「ミナミナビーチ」
             </p>
@@ -583,8 +579,7 @@
 
             <p>
               カムイスキーリンクスは、整備されたリラックスした雰囲気を提供します。
-              グルーミングされていないパウダーが滑る。ツリーランで知られるこのホテルでは、
-              変化に富んだ地形はあらゆるスキルレベルに最適です。
+              グルーミングされていないパウダーが滑る。ツリーランで知られるこのホテルでは、変化に富んだ地形はあらゆるスキルレベルに最適です。
             </p>
 
             <p>
@@ -602,12 +597,9 @@
 
             <p>&nbsp;</p>
 
-            <h6>大雪山 ソウン居 黒岳</h6>
+            <h6>大雪山層雲峡</h6>
 
-            <p>
-              黒岳ロープウェイ＆リフトで黒岳（1,984m）へ。
-              大雪山の最高峰。
-            </p>
+            <p>黒岳ロープウェイ＆リフトで黒岳（1,984m）へ。 大雪山の最高峰。</p>
 
             <p>&nbsp;</p>
 
@@ -615,8 +607,7 @@
 
             <p>
               旭岳温泉（1,100m）から五合目までを結ぶ旭岳ロープウェイ
-              旭岳駅（1,600m）まで10分で到着します。
-              日本一のパウダー。
+              旭岳駅（1,600m）まで10分で到着します。 日本一のパウダー。
             </p>
 
             <p>&nbsp;</p>
@@ -625,8 +616,7 @@
 
             <p>
               南富良野町にある国営スキー場。スキーです
-              ナイターも楽しめるリゾート
-              初心者も上級者も同じように楽しめます。
+              ナイターも楽しめるリゾート 初心者も上級者も同じように楽しめます。
             </p>
 
             <p>&nbsp;</p>
@@ -650,8 +640,7 @@
 
           <p>
             おいしい空気を使って天然酵母で丁寧に焼き上げたシンプルなパン
-            南富良野町の水と小麦
-            北海道。
+            南富良野町の水と小麦 北海道。
           </p>
 
           <p>&nbsp;</p>
@@ -674,12 +663,11 @@
             他の商品とコーヒーのテイクアウトのみを提供しています。東川
             北海道のほぼ中央に位置する、北海道唯一の町です。
             水道のない北海道で地下水を利用
-            大雪山系の雪解け水がゆっくりと流れ込み、
-            家庭用給水。
+            大雪山系の雪解け水がゆっくりと流れ込み、 家庭用給水。
           </p>
         </div>
         <div class="tab-panel panel-h" role="tabpanel">
-          <h6>星野リゾート TOMAMU</h6>
+          <h6>星野リゾート トマム</h6>
 
           <p>
             サラサラの粉雪で知られる星野リゾート トマム。
@@ -702,7 +690,8 @@
           <h6>カムイスキーリンクス</h6>
 
           <p>
-            カムイ スキー リンクスは、手入れが行き届いたリラックスした雰囲気を提供します。
+            カムイ スキー
+            リンクスは、手入れが行き届いたリラックスした雰囲気を提供します。
             整備されていないパウダーが滑る。ツリーランで知られ、さまざまなアクティビティを提供しています
             すべてのスキルレベルに最適な地形。
           </p>
@@ -711,15 +700,14 @@
 
           <p>
             極上のパウダースノーと多彩なスキーを楽しめるリゾート
-            家族向けのランニングから上級のバックカントリーまでの体験
-            冒険。
+            家族向けのランニングから上級のバックカントリーまでの体験 冒険。
           </p>
         </div>
         <div class="tab-panel panel-i" role="tabpanel">
-          <h6>銀 Ｂぅえ ポンｄ （青い池）</h6>
+          <h6>白金 青い池</h6>
           <p>
-           冬は結氷する池が幻想的
-            照らされた。 10分ごとに様々なパターンが変化するようプログラムされています。
+            冬は結氷する池が幻想的 照らされた。
+            10分ごとに様々なパターンが変化するようプログラムされています。
             サイクル。
           </p>
         </div>
@@ -768,8 +756,7 @@
               <p>
                 星野リゾートの「OMO7 旭川」。
                 サウナ入浴が楽しめます。心地よいウェルネスタイムをお楽しみください
-                旅の疲れを癒し、バランスと調和へと導きます。
-                体と心の。
+                旅の疲れを癒し、バランスと調和へと導きます。 体と心の。
               </p>
             </div>
           </div>
@@ -858,8 +845,7 @@
               <div class="answer">
                 <p>
                   はい、滞在期間は次からカスタマイズできます。
-                  最低5日間。ご希望の日数を選択するだけです
-                  ご予約の際に。
+                  最低5日間。ご希望の日数を選択するだけです ご予約の際に。
                 </p>
               </div>
             </div>
@@ -874,7 +860,8 @@
 
               <div class="answer">
                 <p>
-                  確実にご予約いただくために、少なくとも 2 週間前までにご予約いただくことをお勧めします
+                  確実にご予約いただくために、少なくとも 2
+                  週間前までにご予約いただくことをお勧めします
                   特に繁忙期の場合は、ご希望の日付をお知らせください。
                 </p>
               </div>
@@ -893,7 +880,8 @@
 
             <div class="answer">
               <p>
-                主要なクレジット カード (Visa、MasterCard、American カード) をご利用いただけます
+                主要なクレジット カード (Visa、MasterCard、American )
+                をご利用いただけます
                 Express）、銀行振込、および次のようなオンライン支払いサービス
                 ペイパル。
               </p>
@@ -911,8 +899,8 @@
             <div class="answer">
               <p>
                 はい、分割払いオプションをご利用いただけます。弊社までご連絡ください
-                セットアップ方法の詳細については、カスタマー サービス チームにお問い合わせください。
-                分割払い。
+                セットアップ方法の詳細については、カスタマー サービス
+                チームにお問い合わせください。 分割払い。
               </p>
             </div>
           </div>
@@ -928,7 +916,7 @@
             <div class="answer">
               <p>
                 パッケージ料金には税金とサービス料が含まれます。どれでも
-                パッケージに含まれない追加のアクティビティまたはサービス
+                パッケージに含まれない追加のアクティビティまたはサービスには
                 追加料金がかかります。
               </p>
             </div>
@@ -947,8 +935,7 @@
             <div class="answer">
               <p>
                 予約のキャンセルは、当社のウェブサイトからオンラインで行うか、次の方法で行うことができます。
-                当社のカスタマーサービスチームにご連絡ください。ご予約をお願いいたします
-                参照番号の準備ができました。
+                当社のカスタマーサービスチームにご連絡ください。
               </p>
             </div>
           </div>
@@ -987,7 +974,6 @@
               <p>
                 自分のスキー用具を持参することも、スキー場でレンタルすることもできます
                 リゾート。スキー、スノーボードのレンタルオプションも利用できます。
-                その他必要なギア。
               </p>
             </div>
           </div>
@@ -1002,10 +988,9 @@
 
             <div class="answer">
               <p>
-                駐車場の位置はこちらからご確認ください。
-                星野リゾート Tomamu https://www.snowtomamu.jp/winter/areamap/ OMO7
-                旭川 ｂｙ 星の レソＲＴ
-                https://omo-hotels.com/asahikawa/access/#anc-parking
+                駐車場の位置はこちらからご確認ください。 星野リゾート トマム
+                https://www.snowtomamu.jp/winter/areamap/ OMO7 旭川 ｂｙ 星の
+                レソＲＴ https://omo-hotels.com/asahikawa/access/#anc-parking
               </p>
             </div>
           </div>
@@ -1017,11 +1002,11 @@
           <h6>予約方法:</h6>
           <p>
             1.<span>日付を選択してください</span>:ご希望の開始日を選択してください
-            滞在期間を最小限からカスタマイズできます。
-            5日間。
+            滞在期間を最小限からカスタマイズできます。 5日間。
           </p>
           <p>
-            2.<span>パッケージを選択してください</span>: 柔軟なパッケージからお選びください
+            2.<span>パッケージを選択してください</span>:
+            柔軟なパッケージからお選びください
             キャンピングカーのレンタルや無制限のスキーパスなどのオプションもあります。
           </p>
           <p>
@@ -1040,8 +1025,7 @@
           </p>
           <p>
             2.<span>限定アメニティ</span>
-            プール、サウナ、
-            食事のオプション。
+            プール、サウナ、 食事のオプション。
           </p>
           <p>
             3.<span>最高品質の設備</span>
@@ -1055,9 +1039,8 @@
           </p>
 
           <p>
-            5.<span>顧客サポート</span>弊社の専任サポートチームは、
-            ご質問や調整についてお手伝いいたします。
-            予約。
+            5.<span>カスタマーサポート</span>弊社の専任サポートチームは、
+            ご質問やご予約の調整についてお手伝いいたします。
           </p>
         </div>
 
@@ -1068,7 +1051,7 @@
           </div>
 
           <div class="form-item">
-            <label for="email">電子メールアドレス:</label>
+            <label for="email">メールアドレス:</label>
             <input type="email" id="email" name="email" required />
           </div>
 
@@ -1083,9 +1066,7 @@
           </div>
 
           <div class="form-item">
-            <label for="license-country"
-              >運転免許証発行国:</label
-            >
+            <label for="license-country">運転免許証発行国:</label>
             <input
               type="text"
               id="license-country"
@@ -1095,7 +1076,7 @@
           </div>
 
           <div class="form-item">
-            <label for="intl-license-front">国際免許証のフロント:</label>
+            <label for="intl-license-front">免許証(表面):</label>
             <input
               type="file"
               id="intl-license-front"
@@ -1106,7 +1087,7 @@
           </div>
 
           <div class="form-item">
-            <label for="intl-license-back">国際免許証バック:</label>
+            <label for="intl-license-back">免許証(裏面):</label>
             <input
               type="file"
               id="intl-license-back"
@@ -1117,9 +1098,7 @@
           </div>
 
           <div class="form-item">
-            <label for="japanese-translation"
-              >公式日本語訳:</label
-            >
+            <label for="japanese-translation">公式日本語訳:</label>
             <input
               type="file"
               id="japanese-translation"
