--- a/index_jp.html
+++ b/index_jp.html
@@ -1186,17 +1186,16 @@
         <h3>お問い合わせ</h3>
         <div class="column-2">
           <div class="info-item-wrapper">
-            <p>助けが必要？弊社のサポートチームにお問い合わせください。</p>
             <div class="info-item">
-              <span class="material-symbols-outlined"> 郵便 </span>
+              <span class="material-symbols-outlined"> POSTAL</span>
               <p>
-                758-209 千歳おばちゃん,<br />
-                北海道 ０６６ー００１２
+                758-209 Bibi, Chitose,<br />
+                Hokkaido 066-0012
               </p>
             </div>
 
             <div class="info-item">
-              <span class="material-symbols-outlined">郵便 </span>
+              <span class="material-symbols-outlined">Email</span>
               <p>info@japan-crc.com</p>
             </div>
           </div>
