日本語訳の修正

--- a/index.html
+++ b/index.html
@@ -939,8 +939,7 @@
             <div class="answer">
               <p>
                 We accept major credit cards (Visa, MasterCard, American
-                Express), bank transfers, and online payment services like
-                PayPal.
+                Express).
               </p>
             </div>
           </div>
@@ -954,11 +953,7 @@
             </label>
 
             <div class="answer">
-              <p>
-                Yes, we offer installment payment options. Please contact our
-                customer service team for more details on how to set up an
-                installment plan.
-              </p>
+              <p>No</p>
             </div>
           </div>
           <div class="faq">
@@ -972,9 +967,8 @@
 
             <div class="answer">
               <p>
-                The package price includes taxes and service fees. Any
-                additional activities or services not included in the package
-                will incur extra charges.
+                Any additional activities or services not included in the
+                package will incur extra charges.
               </p>
             </div>
           </div>
@@ -1008,10 +1002,15 @@
 
             <div class="answer">
               <p>
-                Cancellations made more than 14 days before the start date will
-                receive a full refund. Cancellations made within 14 days will
-                incur a 50% fee. No refunds will be given for cancellations made
-                within 7 days of the start date.
+                ※Cancellation Policy ●10% of your total amount will be charged
+                if you cancel a confirmed reservation. ●20% of your total amount
+                will be charged if you cancel from 8 to 7 days prior to your
+                scheduled pickup date. ●30% of your total amount will be charged
+                if you cancel from 6 to 2 days prior to your scheduled pickup
+                date. ●80% of your total amount will be charged if you cancel
+                1day prior to your scheduled pickup date. ●100% of your total
+                amount will be charged if you cancel on your scheduled pickup
+                date or No show.
               </p>
             </div>
           </div>
