--- a/index_jp.html
+++ b/index_jp.html
@@ -40,10 +40,10 @@
     <header>
       <div>
         <h1 class="header-title">
-          北海道パウダーベルトを探索しよう：あなた好みのスキーアドベンチャーをカスタマイズ
+          北海道パウダーベルトをめぐるキャンピングカープラン
         </h1>
         <h5 class="header-title">
-          あなたのニーズに合わせた柔軟なキャンピングカーツアーパッケージ
+          ニーズに合わせた柔軟なキャンピングカーツアーパッケージ
         </h5>
         <a class="header-reservation-btn" href="./">今すぐ予約</a>
       </div>
@@ -65,9 +65,9 @@
 
     <main>
       <section>
-        <h3 class="my-midium">北海道パウダーベルトを探索する</h3>
+        <h3 class="my-midium">北海道パウダーベルトを満喫する</h3>
         <p>
-          北海道パウダーベルトは、スキーヤーにとって一流の目的地であり、その卓越したパウダースノー、多様なスキーリゾート、そして容易なアクセス性で知られています。北海道の中央部に位置するこのエリアは、南北約200キロメートルにわたり、複数の著名なリゾートで様々なスキー体験を提供しています。
+          北海道パウダーベルトは、スキーヤーにとって魅力的な目的地であり、その卓越したパウダースノー、多様なスキーリゾートとして知られています。北海道の中央部に位置するこのエリアは、南北約200キロメートルにわたり、複数の有名なリゾートで様々なスキー体験を提供しています。
         </p>
         <div class="column-2 my-midium">
           <img src="./common/images/images01.webp" alt="" />
@@ -91,7 +91,7 @@
         </div>
       </section>
       <section>
-        <h3>Package Details</h3>
+        <h3>プランの詳細</h3>
         <div class="my-midium">
           <input
             id="tab-a"
@@ -162,15 +162,15 @@
               <div class="column-2 my-midium">
                 <img src="./common/images/ski.webp" alt="" />
                 <div class="evenly_space">
-                  <h6>Availability:</h6>
+                  <h6>販売期間:</h6>
                   <p>
                     旅行パッケージは2024年12月20日から2025年3月31日まで利用可能で、販売期間は2024年8月1日から2025年3月20日までです。
                   </p>
-                  <h6>Customizable Duration:</h6>
+                  <h6>滞在期間:</h6>
                   <p>
                     最低5日間のご予約が必要で、ご希望に合わせて滞在期間をカスタマイズできます。
                   </p>
-                  <h6>Variety of Activities</h6>
+                  <h6>多彩なアクティビティ</h6>
                   <p>
                     スキー以外にも、パウダーベルトでは地元のダイニング、アイスビレッジ、高級宿泊施設など、充実したアフタースキーシーンを楽しめます。星野リゾート
                     トマムのようなリゾートでは、ミナミナビーチ（日本最大の屋内プール）やアイスビレッジのアイスバーなど、ユニークなアトラクションがあり、ワクワクする滞在をお約束します。
@@ -243,7 +243,7 @@
               <div class="my-midium">
                 <p>
                   北海道パウダーベルト5日券は、トマムスキー場、富良野スキー場、カムイスキー場3スキー場で利用可能。
-                  有効期限は滑走開始から10日間です。スキー場は5回滑走できます。
+                  有効期限はスキー譲の利用開始日から10日間です。スキー場は5回利用可能できます。
                 </p>
                 <h5>トマム スキーエリア</h5>
                 <p>
@@ -263,7 +263,7 @@
               <div class="my-midium">
                 <h5>カムイ スキーリンクス</h5>
                 <p>
-                  カムイスキーリンクスは、グルーミングされたパウダーコースとのんびりとした雰囲気のスキー場です。
+                  カムイスキーリンクスは、整備されたパウダーコースとのんびりとした雰囲気のスキー場です。
                   ツリーランで知られ、すべての技術レベルに最適な変化に富んだ地形を提供しています。
                 </p>
                 <p>
@@ -419,7 +419,7 @@
         </div>
       </section>
       <section>
-        <h3>あなたのキャンピングカー</h3>
+        <h3>キャンピングカー一覧</h3>
         <p>
           キャンピングカーは以下のタイプのいずれかから選ばれます。
           特定の車両タイプをお選びいただくことはできませんので、ご理解のほどよろしくお願いいたします。
@@ -438,8 +438,8 @@
             <div>
               <h6>車両装備</h6>
               <p>
-                リアビジョンカメラ、燃料加熱ヒーター、配管システム、外部
-                ソケット、ナビ、ETC機器、インバーター、オーニング、サブバッテリー、
+                リアバックカメラ、FFヒーター、外部充電
+                、ナビ、ETC機器、インバーター、サブバッテリー、
                 冷蔵庫、ガス、コンロ
               </p>
             </div>
@@ -465,8 +465,8 @@
             <div>
               <h6>車両装備</h6>
               <p>
-                リアビジョンカメラ、燃料加熱ヒーター、配管システム、外部
-                ソケット、ナビゲーション、ETC機器、インバーター、サブバッテリー、
+                リアバックカメラ、FFヒーター、外部充電
+                、ナビ、ETC機器、インバーター、サブバッテリー、
                 冷蔵庫、ガス、コンロ
               </p>
             </div>
@@ -560,12 +560,12 @@
             <p>
               サラサラの粉雪で知られる星野リゾート トマム。
               あらゆるレベルに対応する多様なスキーコース。ハイライトには以下が含まれます：
-              アイスビレッジと日本最大のインドアウェーブ「ミナミナビーチ」
+              アイスビレッジと日本最大のインドアウェーブプール「ミナミナビーチ」
             </p>
 
             <p>&nbsp;</p>
 
-            <p>富良野スキー場</p>
+            <h6>富良野スキー場</h6>
 
             <p>
               富良野スキー場は「シャンパンパウダー」の雪質が特徴で、長時間の雪質を楽しめます。
@@ -612,7 +612,7 @@
 
             <p>&nbsp;</p>
 
-            <p>南富良野スキー場</p>
+            <h6>南富良野スキー場</h6>
 
             <p>
               南富良野町にある国営スキー場。スキーです
@@ -621,16 +621,15 @@
 
             <p>&nbsp;</p>
 
-            <p>比布スキー場</p>
+            <p>ぴっぷスキー場</p>
 
             <p>
-              比布スキー場からは広大な上川盆地を望み、
+              ぴっぷスキー場からは広大な上川盆地を望み、
               北海道の屋根、大雪山連峰。
               <br />バリエーション豊かな9つのコースは、
               北海道北部で最も広大な斜面に整備された、
               初心者からベテランまで、誰でも十分に楽しむことができます。
-              スキーの本当の楽しさを満喫してください！醍醐味を存分に味わえる
-              スキーの！
+              スキーの本当の楽しさを満喫してください！醍醐味を存分に味わえます！
             </p>
           </div>
         </div>
@@ -651,7 +650,6 @@
             傾いた納屋を自分たちで修理してカフェを建てました。
             大工さんの手伝い。オリジナルのイメージを維持したかったので、
             内装は少々荒いですが、古き富良野を楽しんでいただければ幸いです。
-            雰囲気。
           </p>
 
           <p>&nbsp;</p>
@@ -663,7 +661,7 @@
             他の商品とコーヒーのテイクアウトのみを提供しています。東川
             北海道のほぼ中央に位置する、北海道唯一の町です。
             水道のない北海道で地下水を利用
-            大雪山系の雪解け水がゆっくりと流れ込み、 家庭用給水。
+            大雪山系の雪解け水がゆっくりと流れ込みます 。
           </p>
         </div>
         <div class="tab-panel panel-h" role="tabpanel">
@@ -828,8 +826,6 @@
               <div class="answer">
                 <p>
                   公式サイトを通じて旅行パッケージをオンラインで予約できます
-                  ウェブサイト、またはカスタマーサービスホットラインにお電話ください。私達も
-                  認定旅行代理店を通じて予約を受け付けます。
                 </p>
               </div>
             </div>
@@ -881,9 +877,7 @@
             <div class="answer">
               <p>
                 主要なクレジット カード (Visa、MasterCard、American )
-                をご利用いただけます
-                Express）、銀行振込、および次のようなオンライン支払いサービス
-                ペイパル。
+                をご利用いただけます Express）
               </p>
             </div>
           </div>
@@ -897,11 +891,7 @@
             </label>
 
             <div class="answer">
-              <p>
-                はい、分割払いオプションをご利用いただけます。弊社までご連絡ください
-                セットアップ方法の詳細については、カスタマー サービス
-                チームにお問い合わせください。 分割払い。
-              </p>
+              <p>いいえ、分割払いは受け付けておりません</p>
             </div>
           </div>
           <div class="faq">
@@ -915,7 +905,6 @@
 
             <div class="answer">
               <p>
-                パッケージ料金には税金とサービス料が含まれます。どれでも
                 パッケージに含まれない追加のアクティビティまたはサービスには
                 追加料金がかかります。
               </p>
@@ -950,10 +939,12 @@
 
             <div class="answer">
               <p>
-                開始日の 14 日前以降にキャンセルされた場合は、
-                全額返金を受けられます。 14日以内にキャンセルした場合、
-                50％の手数料がかかります。キャンセルによる返金はありません
-                開始日から7日以内。
+                キャンセルポリシー
+                予約確定後のキャンセルは総額の10％を申し受けます。
+                予定日の8日前～7日前までのキャンセルは、合計金額の20％を申し受けます。
+                予定日の6日前～2日前までのキャンセルは合計金額の30％を申し受けます。
+                予定日の1日前からのキャンセルは、合計金額の80％を申し受けます。
+                予定日当日のキャンセル、または無断キャンセルは合計金額の100％を申し受けます。
               </p>
             </div>
           </div>
@@ -990,52 +981,47 @@
               <p>
                 駐車場の位置はこちらからご確認ください。 星野リゾート トマム
                 https://www.snowtomamu.jp/winter/areamap/ OMO7 旭川 ｂｙ 星の
-                レソＲＴ https://omo-hotels.com/asahikawa/access/#anc-parking
+                リゾート https://omo-hotels.com/asahikawa/access/#anc-parking
               </p>
             </div>
           </div>
         </div>
       </section>
       <section>
-        <h3>冒険をカスタマイズする準備はできましたか?</h3>
+        <h3>ご予約方法</h3>
         <div class="ready-section">
           <h6>予約方法:</h6>
           <p>
-            1.<span>日付を選択してください</span>:ご希望の開始日を選択してください
+            1.<span>日付を選択してください</span>:ご希望の利用日を選択してください
             滞在期間を最小限からカスタマイズできます。 5日間。
           </p>
+          <p>2.<span>予約情報を入力してください</span>:</p>
           <p>
-            2.<span>パッケージを選択してください</span>:
-            柔軟なパッケージからお選びください
-            キャンピングカーのレンタルや無制限のスキーパスなどのオプションもあります。
+            3.<span>予約のお申し込み</span>:
+            オンライン予約フォームを使用し、お支払いを行ってください。
           </p>
           <p>
-            3.<span>予約を確認する</span>: 完了してスポットを確保してください
-            オンライン予約フォームを使用し、安全な方法でお支払いを行ってください。
-            支払いシステム。
-          </p>
-          <p>
-            4.<span>確認の受信</span> メールが届きます
-            すべての予約の詳細と詳細な指示の確認
+            4.<span>予約完了の確認</span>
+            申し込み内容と予約確認メールの内容がお間違いないか確認してください
+            ※この段階では予約は確定しておりません
           </p>
           <h6>弊社で予約する理由 :</h6>
           <p>
-            1.<span>柔軟なカスタマイズ</span>: 旅行体験をカスタマイズする
-            あなたのスケジュールや好みに合わせて。
+            1.<span>柔軟なカスタマイズ</span>:
+            あなたのスケジュールや好みに合わせて旅行体験をカスタマイズできます
+            。
           </p>
           <p>
             2.<span>限定アメニティ</span>
-            プール、サウナ、 食事のオプション。
+            プール、サウナなどのオプションを豊富にご用意しております。
           </p>
           <p>
-            3.<span>最高品質の設備</span>
+            3.<span>スキーリゾートを満喫してください</span>
             手入れの行き届いたキャンピングカーと最先端のスキーを満喫してください。
-            設備。
           </p>
           <p>
             4.<span>安全かつ簡単な予約</span>
-            当社のユーザーフレンドリーなプラットフォームにより、スムーズな予約プロセスが保証されます。
-            安全な支払いオプション。
+            当社のユーザーフレンドリーなプラットフォームにより、スムーズな予約が可能です。
           </p>
 
           <p>
@@ -1187,7 +1173,7 @@
         <div class="column-2">
           <div class="info-item-wrapper">
             <div class="info-item">
-              <span class="material-symbols-outlined"> POSTAL</span>
+              <span class="material-symbols-outlined"> Email</span>
               <p>
                 758-209 Bibi, Chitose,<br />
                 Hokkaido 066-0012
